# ProteinGraphML

./: .README.md.swp  .gitignore  .makeVis.py.swp  0001.model  BuildKG.py  BuildKG_OlegDb.py  Build_Graph_Example.ipynb  Build_Graph_Example.py  CHANGELOG.md  CompareRandPythonFeatureSet.py  CreateFeatureFilesFromRDS.py  DBcreds.yaml  FindCommonPid.py  FindCorrelation.py  GenFeatureUtils.py  GenStaticFeatures.py  GenTrainingAndTestFeatures.py  KGutilities.py  LICENSE  ML Example.ipynb  ML_Example.py  MakeVis.py  NextML.py  PickleTrainingTestSet.py  PickleTrainingset.py  PredictML.py  PrepTrainingAndTestSets.py  ProteinGraphML.yaml  README.md  RunML.py  RunML_Example.py  RunML_OLD.py  TrainModelML.py  XGBParameters.txt  XGBparams.txt  dependencies.yml  features.py  generate_pkl_dict.py  makeVis.py  pyproject.toml  (+3 more)
DataCompare/: CompareRandPythonFeatureSet.py
DataForML/: 104300.pkl  109800.pkl  125853.pkl  144700.pkl  autophagy_test20191003.pkl  autophagy_test20191003_test.pkl  diabetes.pkl  diabetes.txt  diabetes_pid.pkl  diabetes_pid.xlsx  diabetes_test.pkl
MLModel/: MP_0000180.model  autophagy_test20191003.model
ProteinGraphML/Analysis/: Visualize.py  __init__.py  featureLabel.py
ProteinGraphML/DataAdapter/: Adapter.py  __init__.py  biodata_helper.py
ProteinGraphML/GraphTools/: .graph.py.swp  __init__.py  graph.py
compare/: CompareOlegAndTcrdFeatureSet.py  CompareRandPythonFeatureSet.py  CreateFeatureFilesFromRDS.py  FindCommonPid.py  FindCommonPidTcrdOleg.py  FindCorrelation.py
cql/: db_describe.cql  describedb.cql  dwpc.cql  feature_paths.cql  load_edge_go.cql  load_edge_interpro.cql  load_edge_kegg.cql  load_edge_mp.cql  load_edge_reactome.cql  load_edge_string.cql  load_extras.cql  load_main_edge.cql  load_main_node.cql  mp_count_go.cql  test.cql  test_metapath_go.cql  test_metapath_interpro.cql  test_metapath_kegg.cql  test_metapath_reactome.cql  test_metapath_string.cql
data/: ATG.xlsx  autophagy_test20191003.xlsx  diabetes.csv  diabetes.txt  diabetes.xlsx  diabetes_pid.txt  plotDT.xlsx
doc/: ComparingResults.md  Visualization.md
nb/: roc_auc.Rmd
proteingraphml/: __init__.py
sh/: Go_neo_DbCreate.sh  Go_neo_DbDump.sh  run_alzheimer1.sh
sql/: metap_default_negatives.sql  metap_mousephenotype.sql  metap_mousephenotype2.sql  tcrd_default_negatives.sql  tcrd_mousephenotype.sql  tcrd_mousephenotype2.sql  tcrd_mousephenotype3.sql
tests/: BuildKG.py  DBcreds.yaml  GenStaticFeatures.py  GenTrainingAndTestFeatures.py  MakeVis.py  PredictML.py  PrepTrainingAndTestSets.py  RunML_Example.py  RunML_OLD.py  TrainModelML.py  features.py  read_RDS.py
(+47 files in other folders)
